Fixed iframe spacing

--- a/components/molecules/window/window.module.scss
+++ b/components/molecules/window/window.module.scss
@@ -62,6 +62,7 @@
 
 @media screen and (max-width: 500px) {
   .window {
+    max-width: 100% !important;
     min-width: 100%;
     transform: unset !important;
     top: unset !important;
